RT-19134: Update images for Connected

--- a/content/education/stem-programs/code-at-tacc/connected.html
+++ b/content/education/stem-programs/code-at-tacc/connected.html
@@ -38,7 +38,7 @@
 		</div>
 		<div class="col-md-6">
 			<p class="centered">
-				<img class="img-responsive" src="/documents/1084364/1822769/connected-2.jpeg/" /></p>
+				<img class="img-responsive" src="/documents/1084364/1967140/connected-6.jpg" /></p>
 		</div>
 	</div>
 	<!-- Short Info about camp -->
@@ -75,7 +75,7 @@
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
 			<p class="centered">
-				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/1822769/connected-3.jpeg/" /></p>
+				<img alt="Students working on natural hazards project" class="img-responsive" src="/documents/1084364/1967140/connected-3.jpg" /></p>
 		</div>
 		<div class="col-md-6 col-xs-12">
 			<h4 class="camp-subhead">
