RT-19167: Text tweak to REU content

--- a/content/reu--content.html
+++ b/content/reu--content.html
@@ -35,7 +35,7 @@
 <h4 style="margin-top:20px;">
 	APPLICATION &amp; SELECTION</h4>
 <p>
-	The application period for Summer 2021 is November 1, 2020 - March 1, 2021.<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
+	The application period for Summer 2021 has closed. The application period for Summer 2022 is November 1, 2021 - March 1, 2022 (contingent on funding).<!--We recommend that you collect all information before starting the application to prevent loss of information if you leave or close the application page.--></p>
 <ol>
     <li>Complete the <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiU4rbEBA3d72YEd__WDjI2sPkyidYhRAqYb_TcEK3L4eo8Q/viewform">application</a> before March 1, 2021, 11:59pm CST.</li>
     <li>Email copy of unofficial or official transcript to <a href="mailto:CIR4SC@tacc.utexas.edu">CIR4SC@tacc.utexas.edu</a>. Selected participants will be required to submit an official transcript.</li>
