--- a/content/about/directory--full-time.html
+++ b/content/about/directory--full-time.html
@@ -1141,6 +1141,14 @@
 		</tr>
 		<tr>
 			<td>
+				<a href="/web/website/about/directory/pinakini-samant">Samant, Pinakini</a></td>
+			<td>
+				<a href="mailto:psamant@tacc.utexas.edu">psamant@tacc.utexas.edu</a></td>
+			<td>
+				Scalable Computational Intelligence</td>
+		</tr>
+		<tr>
+			<td>
 				<a href="/web/website/about/directory/francesca-samsel">Samsel, Francesca</a></td>
 			<td>
 				<a href="mailto:fsamsel@tacc.utexas.edu">fsamsel@tacc.utexas.edu</a></td>
