--- a/content/education/EPIC/WeTeach_CS/certification.html
+++ b/content/education/EPIC/WeTeach_CS/certification.html
@@ -260,9 +260,9 @@ Style guide: components.weteachcs.cta
 	<p>
 		Whether you are a beginning computer science teacher or an experienced veteran, WeTeach_CS for HS provides all the instruction, materials, and support you need to teach a first year computer science course using three programming platforms: Scratch, Jeroo, and Java.</p>
 	<h6>
-		<a href="https://utakeit.tacc.utexas.edu/weteach_apcsa/" target="_blank">WeTeach_AP®CSA</a></h6>
+		<a href="https://utakeit.tacc.utexas.edu/weteach_apcsa/" target="_blank">WeTeach_AP&reg;CSA</a></h6>
 	<p>
-		The WeTeach_AP®CSA curriculum is aligned with new College Board CED (Course Exam Description) for Computer Science "A". Each module is structured around objectives that provide context and relevance for you and your students. Designed with teachers in mind, WeTeach_AP®CSA offers professional support through an online help desk, virtual office hours with the course developers, and forums for peer to peer collaboration on the curriculum.</p>
+		The WeTeach_AP&reg;CSA curriculum is aligned with new College Board CED (Course Exam Description) for Computer Science "A". Each module is structured around objectives that provide context and relevance for you and your students. Designed with teachers in mind, WeTeach_AP&reg;CSA offers professional support through an online help desk, virtual office hours with the course developers, and forums for peer to peer collaboration on the curriculum.</p>
 	<h4>
 		Supported by:</h4>
 	<p>
