Quick: Update banner to CMS latest

--- a/content/home--banner.html
+++ b/content/home--banner.html
@@ -1,22 +1,23 @@
 <div class="row">
 	<!-- opening Overall Banner Row -->
 	<div class="col-sm-6 col-xs-12">
-		<!-- opening first 2x2 --><a href="/web/website/-/re-engineering-antibodies-to-find-relief-for-covid-19"> <img alt="RE-ENGINEERING ANTIBODIES TO FIND RELIEF FOR COVID-19" class="img-responsive" src="/documents/1084364/1821378/2x2-CovidAntibodies.jpg/" width="100%" /> </a></div>
+		<!-- opening first 2x2 --><a href="/web/website/-/evolving-the-early-universe-in-24-hours-on-frontera"> <img alt="EVOLVING THE EARLY UNIVERSE IN 24 HOURS ON FRONTERA" class="img-responsive" src="/documents/1084364/1946653/2x2-Evolving.jpg/" width="100%" /> </a></div>
 	<!-- closing first 2x2 -->
 	<div class="col-sm-6 col-xs-12">
 		<!-- opening second 2x2: 2x1 and 2-1x1 rows -->
 		<div class="row">
 			<!-- opening 2x2 row -->
 			<div class="col-xs-12">
-				<a href="/web/website/-/international-project-to-delve-into-the-mysteries-of-brain-connections"> <img alt="INTERNATIONAL PROJECT TO DELVE INTO THE MYSTERIES OF BRAIN CONNECTIONS" class="img-responsive" src="/documents/1084364/1821378/2x1-Brain.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/tacc-launches-expanded-frontera-supercomputer-to-support-urgent-computing"> <img alt="FRONTERA EXPANSION TO SUPPORT URGENT COMPUTING" class="img-responsive" src="/documents/1084364/1821378/2x1-frontera-urgent-computing-expansion.jpg/" width="100%" /> </a></div>
 		</div>
 		<!--closing 2-1x1 row -->
 		<div class="row">
 			<!-- opening 2x2 row -->
 			<div class="col-xs-6">
-				<a href="/web/website/-/deep-learning-will-help-future-mars-rovers-go-farther-faster-and-do-more-science"> <img alt="DEEP LEARNING WILL HELP FUTURE MARS ROVERS GO FARTHER FASTER AND DO MORE SCIENCE" class="img-responsive" src="/documents/1084364/1821378/1x1-MarsRovers.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/simulating-800-000-years-of-california-earthquake-history-to-pinpoint-risks" target="_blank"> <img alt="
+SIMULATING 800,000 YEARS OF CALIFORNIA EARTHQUAKE HISTORY TO PINPOINT RISKS" class="img-responsive" src="/documents/1084364/1946653/1x1-Earthquakes.jpg/" width="100%" /> </a></div>
 			<div class="col-xs-6">
-				<a href="/web/website/-/supercomputers-create-world-s-most-detailed-simulations-of-tornadoes"> <img alt="SUPERCOMPUTERS CREATE WORLD'S MOST DETAILED SIMULATIONS OF TORNADOES" class="img-responsive" src="/documents/1084364/1821378/1x1-Tornados.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/researchers-measure-model-desalination-membranes-to-maximize-flow-clean-more-water"> <img alt="RESEARCHERS MEASURE, MODEL DESALINATION MEMBRANES TO MAXIMIZE FLOW, CLEAN MORE WATER" class="img-responsive" src="/documents/1084364/1946653/1x1-Science-mag.jpg/" width="100%" /> </a></div>
 		</div>
 		<!-- closing 2x2 row --></div>
 	<!-- closing second 2x2 --></div>
