Quick: Update banner to new entires

--- a/content/home--banner.html
+++ b/content/home--banner.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<!-- opening Overall Banner Row -->
 	<div class="col-sm-6 col-xs-12">
-		<!-- opening first 2x2 --><a href="/web/website/-/evolving-the-early-universe-in-24-hours-on-frontera"> <img alt="EVOLVING THE EARLY UNIVERSE IN 24 HOURS ON FRONTERA" class="img-responsive" src="/documents/1084364/1946653/2x2-Evolving.jpg/" width="100%" /> </a></div>
+		<!-- opening first 2x2 --><a href="/web/website/-/tracking-cosmic-ghosts"> <img alt="Tracking Cosmic Ghosts" class="img-responsive" src="/documents/1084364/1946653/2x2-ghosts.jpg/" width="100%" /> </a></div>
 	<!-- closing first 2x2 -->
 	<div class="col-sm-6 col-xs-12">
 		<!-- opening second 2x2: 2x1 and 2-1x1 rows -->
@@ -14,10 +14,9 @@
 		<div class="row">
 			<!-- opening 2x2 row -->
 			<div class="col-xs-6">
-				<a href="/web/website/-/simulating-800-000-years-of-california-earthquake-history-to-pinpoint-risks" target="_blank"> <img alt="
-SIMULATING 800,000 YEARS OF CALIFORNIA EARTHQUAKE HISTORY TO PINPOINT RISKS" class="img-responsive" src="/documents/1084364/1946653/1x1-Earthquakes.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/getting-to-the-core-of-hiv-replication" target="_blank"> <img alt="Getting to the Core of HIV Replication" class="img-responsive" src="/documents/1084364/1946653/1x1-HIV.jpg/" width="100%" /> </a></div>
 			<div class="col-xs-6">
-				<a href="/web/website/-/researchers-measure-model-desalination-membranes-to-maximize-flow-clean-more-water"> <img alt="RESEARCHERS MEASURE, MODEL DESALINATION MEMBRANES TO MAXIMIZE FLOW, CLEAN MORE WATER" class="img-responsive" src="/documents/1084364/1946653/1x1-Science-mag.jpg/" width="100%" /> </a></div>
+				<a href="/web/website/-/how-uk-south-africa-coronavirus-variants-escape-immunity"> <img alt="How UK, South Africa Coronavirus Variants Escape Immunity" class="img-responsive" src="/documents/1084364/1946653/1x1-Immunity.jpg/" width="100%" /> </a></div>
 		</div>
 		<!-- closing 2x2 row --></div>
 	<!-- closing second 2x2 --></div>
