RT-19075: Remove "gone" systems

--- a/content/use-tacc/getting-started.html
+++ b/content/use-tacc/getting-started.html
@@ -58,8 +58,9 @@
 						<a href="/web/website/systems/stampede2">Stampede2</a></li>
 					<li>
 						<a href="/web/website/systems/lonestar">Lonestar</a></li>
-					<li>
-						<a href="/web/website/systems/wrangler">Wrangler</a></li>
+					<!-- RT-19075: Removed because system is "Gone" -->
+					<!--<li>
+						<a href="/web/website/systems/wrangler">Wrangler</a></li>-->
 					<li>
 						<a href="/web/website/systems/jetstream">Jetstream</a></li>
 				</ul>
@@ -87,10 +88,12 @@ Learn More: HPC Area/Department Page, Related Features
 				<p class="bold">
 					Learn More About TACC's Data Services &amp; Systems:</p>
 				<ul>
-					<li>
-						<a href="/web/website/systems/wrangler">Wrangler</a></li>
-					<li>
-						<a href="/web/website/systems/maverick">Maverick</a></li>
+					<!-- RT-19075: Removed because system is "Gone" -->
+					<!--<li>
+						<a href="/web/website/systems/wrangler">Wrangler</a></li>-->
+					<!-- RT-19075: Removed because system is "Gone" -->
+					<!--<li>
+						<a href="/web/website/systems/maverick">Maverick</a></li>-->
 					<li>
 						<a href="/web/website/systems/corral">Corral</a></li>
 					<li>
@@ -128,8 +131,9 @@ Data Management and Collections {{link to existing page- https://www.tacc.utexas
 				<p class="bold">
 					Learn More About TACC's Visualization Systems &amp; Services:</p>
 				<ul>
-					<li>
-						<a href="/web/website/systems/maverick">Maverick</a></li>
+					<!-- RT-19075: Removed because system is "Gone" -->
+					<!--<li>
+						<a href="/web/website/systems/maverick">Maverick</a></li>-->
 					<li>
 						<a href="/web/website/vislab/stallion">Stallion</a></li>
 					<li>
