--- a/content/about/jobs.html
+++ b/content/about/jobs.html
@@ -63,6 +63,22 @@
 	</div>
 
 
+	<div class="panel panel-default">
+		<div class="panel-heading" id="data" role="tab">
+			<h4 class="panel-title">
+				<a aria-controls="jr-security-analyst" aria-expanded="true" class="collapsed" data-parent="data" data-toggle="collapse" href="#jr-security-analyst" role="button">Junior Security Analyst</a></h4>
+		</div>
+		<div aria-labelledby="data" class="panel-collapse collapse" id="jr-security-analyst" role="tabpanel">
+			<div class="panel-body">
+				<p>The Junior Security Analyst position in the Technology Infrastructure group at the Texas Advanced Computing Center (TACC) will provide network vulnerability testing, monitoring and network security compliance audits to ensure best practices are in use and network systems comply with TACC security policies.</p>
+
+				<p>
+					<strong><a href="https://utaustin.wd1.myworkdayjobs.com/UTstaff/job/PICKLE-RESEARCH-CAMPUS/Junior-Security-Analyst_R_00012150" target="_blank" title="Apply Now">Apply Now</a></strong></p>
+			</div>
+		</div>
+	</div>
+
+
 	<!-- TEMPLATE: Job Listing --><!-- FAQ: Be sure to update and test the collapsible section UX --><!-- NOTE: The `id="data"` is repeated... bad. What relies on that ID? --><!-- RFE: Consider using <template> tag --><!--
 	<div class="panel panel-default">
 		<div class="panel-heading" id="data" role="tab">
