RT-19260: Code@TACC: CMS update. Revive logo grid.

--- a/content/education/EPIC/funders-and-project-partners.html
+++ b/content/education/EPIC/funders-and-project-partners.html
@@ -123,24 +123,7 @@ Style guide: components.weteachcs.card
                 Thank you to all of the funders and project partners of EPIC and WeTeach_CS. Without them, our work would not be possible.</p>
         </div>
     </div>
-    <h3>
-        Thank You</h3>
-    <ul>
-        <li>National Science Foundation</li>
-        <li>Siegel Family Endowment</li>
-        <li>Google</li>
-        <li>Microsoft</li>
-        <li>KLE Foundation</li>
-        <li>Jobs for the Future</li>
-        <li>Robin Hood</li>
-        <li>Code.org</li>
-        <li>100kin10</li>
-        <li>Texas Education Agency</li>
-        <li>Texas Instruments</li>
-    </ul>
-    <!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"-->
-    <!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations -->
-    <!--<style id="o-gallery-styles">
+    <style id="o-gallery-styles">
         /*
         Gallery (Object)
 
@@ -174,6 +157,11 @@ Style guide: components.weteachcs.card
         /* WARNING: Duplicated in other pages */
         .s-gallery li {
             list-style-type: none;
+        }
+        .s-gallery + p {
+            margin: 20px auto 10px;
+            width: 57%; /* tweaked until attractive to dev at all breakpoints */
+            text-align: center;
         }
     </style>
     <style id="epic-unique-gallery-styles">
@@ -228,5 +216,6 @@ Style guide: components.weteachcs.card
             <img alt="Texas Instruments" src="https://www.tacc.utexas.edu/documents/1084364/1852071/texas-instruments.png/953697d6-0497-4b38-9ab4-4a5a20c0996b?t=1586990518112" /></li>
         <li class="o-gallery__square">
             <img alt="Code.org" src="https://www.tacc.utexas.edu/documents/1084364/1852071/code-org.png/1822d086-4190-4dcc-befe-b480f79b7db2?t=1586990430843" /></li>
-    </ul>-->
+    </ul>
+    <p class="small">These are all contributors to our goals, and shall get the same general dimensions for space on the site, but none are highlighted more than others.</p>
 </section>
