--- a/content/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/content/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -2,17 +2,15 @@
 	<div class="row" id="retro-header-div">
 		<div class="col-sm-12">
 			<p>
-				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1158641/Code-Wearables-1074px.png" /></p>
-			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />-->
-		</div>
+				<img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-at-tacc-logo code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/GenCyber_logo.png/ea8a7d72-8b79-4b5d-9f65-eb9040f855d5?t=1617916688170" /></p>
+			<!-- <img alt="Code@TACC Summer High School STEM Camp Logo" class="img-responsive code-main-logo" src="https://www.tacc.utexas.edu/documents/1084364/1151567/gencyber-logo-small.png" />--></div>
 		<div class="col-sm-12">
 			<header>
 				<div class="camp-name">
 					GenCyber@TACC</div>
 			</header>
 		</div>
-		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> -->
-		<!-- <div class="col-sm-12">
+		<!-- <h1 style="text-align: center;">Code@TACCATX</h1> --><!-- <a style="text-align: center;"><img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1151567/Code@TACC-logo-small.png" style="margin:0px; padding:0px; width: 300px;" /></a> --><!-- <div class="col-sm-12">
 			<p>
 				<img alt="DesignSafe-CI Camp logo" class="img-responsive code-logo-ds" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DSCamp-logo-centered.png" /></p>
 		</div> -->
@@ -30,8 +28,7 @@
 		<!-- <div class="col-md-6">
 			<p class="centered">
 				<img class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DScamp02.png" /></p>
-		</div> -->
-	</div>
+		</div> --></div>
 	<div class="row">
 		<div class="col-md-6">
 			<p>
@@ -50,33 +47,24 @@
 	<div class="row  data-banner">
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Dates</span>
-				<span class="data-banner__title-content">July 6 – July 16, 2021</span>
-			</h2>
+				<span class="data-banner__title">Dates</span> <span class="data-banner__title-content">July 6 – July 16, 2021</span></h2>
 		</div>
 		<div class="col-md-4  data-banner__column data-banner__center-column">
 			<h2>
-				<span class="data-banner__title">Application</span>
-				<a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a>
-			</h2>
+				<span class="data-banner__title">Application</span> <a class="data-banner__title-content" href="https://utexas.qualtrics.com/jfe/form/SV_aVhIgJLYLwSo5Hn" target="_blank">Apply Here</a></h2>
 			<!--2020-04-21: Camps closed --><!--
 			<p class="data-banner__content  small">
 				Application closes April 26, 2021<br />
-				We will update be notified of acceptance on May 8, 2020</p>-->
-			<!--2020-04-21: Camps closed --><!--
+				We will update be notified of acceptance on May 8, 2020</p>--><!--2020-04-21: Camps closed --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by May 15, if they were selected to participate in the program.</p>
-			-->
-			<!--2020-04-21: Camps closed --><!--
+			--><!--2020-04-21: Camps closed --><!--
 			<p class="data-banner__content  small">
 				Participants will be notified by May 1, if they were selected to participate in the program. Application closes on April 20, 2020.</p>
-			-->
-		</div>
+			--></div>
 		<div class="col-md-4  data-banner__column">
 			<h2>
-				<span class="data-banner__title">Cost</span>
-				<span class="data-banner__title-content">FREE</span>
-			</h2>
+				<span class="data-banner__title">Cost</span> <span class="data-banner__title-content">FREE</span></h2>
 		</div>
 	</div>
 	<small><!-- Prospective Activities --></small>
@@ -147,7 +135,7 @@
 						<li>
 							<a href="https://idmanager.its.utexas.edu/eid_self_help/" target="_blank" title="UT E-ID Self-Service Tools">Get a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 						<li>
-							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to “Get” a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
+							<a href="https://youtu.be/EePa27mGuGE" target="_blank" title="Creating a UT EID (YouTube video instructions)">Video instructions to "Get" a <abbr title="University of Texas Electronic Identity">UT E-ID</abbr></a></li>
 					</ul>
 				</div>
 				<!--<div class="col-md-4 col-sm-12">
@@ -171,7 +159,7 @@
 						PROGRAM FORMS</h4>
 					<ul class="info-list">
 						<li>
-							Required forms will be available soon.</small></li>
+							Required forms will be available soon.</li>
 					</ul>
 					<!--<p>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></p>
@@ -182,8 +170,7 @@
 								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English Code@TACC Cybersecurity - YPP Camp Release">2018 English Code@TACC Cybersecurity - YPP Camp Release </a></li>
 							<li>
 								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español Code@TACC Cybersecurity - YPP formularios de liberación">2018 Español Code@TACC Cybersecurity - YPP formularios de liberación</a></li>
-						</ul>-->
-				</div>
+						</ul>--></div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
@@ -265,7 +252,7 @@
 					</div>
 					<div aria-labelledby="supervision" class="panel-collapse collapse" id="supervision-answer" role="tabpanel">
 						<div class="panel-body">
-							<b>A:</b> Students will be supervised on the calls by college counselors.  Counselors have been background checked (also checked through the national sex offender registry) and have received child protection training</div>
+							<b>A:</b> Students will be supervised on the calls by college counselors. Counselors have been background checked (also checked through the national sex offender registry) and have received child protection training</div>
 					</div>
 				</div>
 				<!--<div class="panel panel-default">
@@ -277,9 +264,7 @@
 						<div class="panel-body">
 							<b>A:</b> Students will not need to bring laptops from home for this program.</div>
 					</div>
-				</div>-->
-				<!-- HOUSING -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- HOUSING --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="housing" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="housing-answer" aria-expanded="true" class="collapsed" data-parent="#housing" data-toggle="collapse" href="#housing-answer" role="button"> <b>Q</b>: Where will the students be staying during the course of the program? </a></h4>
@@ -328,9 +313,7 @@
 						<div class="panel-body">
 							<b>A:</b> Whitis Court Residential Hall requires key-card access to enter each building. Exits are alarmed and connected to University Police Department. Also, at least two counselors are assigned to sleep in each residential building.</div>
 					</div>
-				</div>-->
-				<!-- MEDICAL -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- MEDICAL --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="allergies" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="allergies-answer" aria-expanded="true" class="collapsed" data-parent="#allergies" data-toggle="collapse" href="#allergies-answer" role="button"> <b>Q</b>: What if I have food allergies or special dietary needs? </a></h4>
@@ -349,9 +332,7 @@
 						<div class="panel-body">
 							<b>A:</b> For emergency treatment, students will be transported to St. David's North Austin Medical Center (12221 N. Mopac) when on JJ Pickle campus or UT Austin University Health Services -our on-campus health service for minor treatment (512-471-4955), Monday through Friday 8a – 5pm. For emergency or after hours treatment, students will be transported to St. David's Hospital on east 32nd street in Austin.</div>
 					</div>
-				</div>-->
-				<!-- CLOTHING -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- CLOTHING --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="clothes" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="washing-clothes" aria-expanded="true" class="collapsed" data-parent="#clothes" data-toggle="collapse" href="#washing-clothes" role="button"> <b>Q</b>: Will students be able to wash clothes? </a></h4>
@@ -380,9 +361,7 @@
 						<div class="panel-body">
 							<b>A:</b> During the week, students should bring comfortable and appropriate clothing for 90F during the day and 70F during the night weather. Also, participants should bring socks for bowling and walking shoes. Note, all casual-wear clothing must conform to school dress code standards.</div>
 					</div>
-				</div>-->
-				<!-- PARTICIPATION -->
-				<!--<div class="panel panel-default">
+				</div>--><!-- PARTICIPATION --><!--<div class="panel panel-default">
 					<div class="panel-heading" id="dismissal" role="tab">
 						<h4 class="panel-title">
 							<a aria-controls="dismissal-answer" aria-expanded="true" class="collapsed" data-parent="#dismissal" data-toggle="collapse" href="#dismissal-answer" role="button"> <b>Q</b>: May students leave campus? </a></h4>
@@ -411,8 +390,7 @@
 						<div class="panel-body">
 							<b>A:</b> Participants will be unable to have visitors. Adults with access to our campers require background checks (also checked through the national sex offender registry) and training on protecting children from abuse. Adults (including counselors) are never allowed to be alone with a camper.</div>
 					</div>
-				</div>-->
-				<!-- 2021 ADDITIONS -->
+				</div>--><!-- 2021 ADDITIONS -->
 				<div class="panel panel-default">
 					<div class="panel-heading" id="wifi" role="tab">
 						<h4 class="panel-title">
@@ -453,7 +431,7 @@
 			<h2 class="camp-subhead">
 				TACC Dress Policy</h2>
 			<p>
-				Participants have the right to dress as they choose as long as their dress meets the approved dress and grooming regulations, does not disrupt activities, is not obscene or defamatory, and does not endanger the physical health or safety of themselves or others.
+				Participants have the right to dress as they choose as long as their dress meets the approved dress and grooming regulations, does not disrupt activities, is not obscene or defamatory, and does not endanger the physical health or safety of themselves or others.</p>
 			<p>
 				Participants have the responsibility to dress and groom in such a manner so as to reflect cleanliness, modesty, safety and good taste; become familiar with and adhere to approved dress and grooming expectations of the Texas Advanced Computing Center (TACC).</p>
 			<p>
@@ -462,7 +440,7 @@
 				<li>
 					Any clothing that reveals undergarments including boxer shorts.</li>
 				<li>
-					Skirts/Shorts that are not within 1 inch of the student’s fingertips when their arms are extended by their side.</li>
+					Skirts/Shorts that are not within 1 inch of the student's fingertips when their arms are extended by their side.</li>
 				<li>
 					Any clothing that reveals a student's stomach, torso, chest, breasts or cleavage.</li>
 				<li>
@@ -484,8 +462,8 @@
 				Funding</h2>
 			<p class="camp-aside">
 				The camp was funded by the National Security Agency and the National Science Foundation.</p>
-			<!-- Gallery removed 2020-09 for "UTS 122 Guidelines […]"--><!-- SEE: https://www.utsystem.edu/sites/policy-library/policies/uts-122-guidelines-web-site-solicitations --><!--<style id="o-gallery-styles" type="text/css">
-	/*
+			<!-- Gallery removed 2020-09. Restoration proposed 2021-04. --><!--<style id="o-gallery-styles" type="text/css">
+			/*
 			Gallery (Object)
 	
 			A gallery of apps to launch, images to view, etc.
@@ -512,7 +490,7 @@
 				align-items: center;
 			}	</style>
 		<style id="s-gallery-styles" type="text/css">
-	/*
+			/*
 			Gallery (Scope)
 	
 			Styles often added for instances of `o-gallery`, but independent of `o-gallery` layout.
@@ -524,7 +502,12 @@
 			*/
 			.s-gallery li {
 				list-style-type: none;
-			}	</style>
+			}
+			.s-gallery + p {
+				margin: 20px auto 10px;
+				text-align: center;
+			}
+		</style>
 		<style id="cybersecurity-unique-gallery-styles" type="text/css">
 	.o-gallery {
 				--grid-gap: 25px;
@@ -541,13 +524,14 @@
 				max-width: var(--smallest-image-width);
 				max-height: var(--smallest-image-height);
 			}	</style>
-				<ul class="o-gallery  s-gallery">
+				<ul class="o-gallery  s-gallery  small">
 					<li>
-						<small><img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></small></li>
+						<img alt="Silicon Valley Logo" src="/documents/1084364/1822769/silicon-valley-logo.png" /></li>
 					<li>
-						<small><img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></small></li>
+						<img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></li>
 				</ul>
-			--></div>
+				<p class="small">These are all contributors to our goals, and shall get the same general dimensions for space on the site, but none are highlighted more than others.</p>
+			</div>
 	</div>
 	<!--
 		<div class="row">
