RT-17685: New Edu: Tours, Pros, Grads

--- a/web-content-display/education-new/styles.html
+++ b/web-content-display/education-new/styles.html
@@ -5,4 +5,11 @@
 .edu-list--major {
     list-style-type: none;
     margin-left: 0;
-}</style>
+}
+.edu-list--major a small {
+    display: inline-block;
+    margin-bottom: 0.3em;
+
+    color: unset; /* undo `tacc-new-theme/css/main.css` */
+}
+</style>
