RT-17685: New Edu: Finish Content

--- a/web-content-display/education-new/k-12--students.html
+++ b/web-content-display/education-new/k-12--students.html
@@ -12,31 +12,31 @@
 	</li>
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/connected">Connected</a></h4>
+			<a href="/education/stem-programs/code-at-tacc/connected">Connected</a></h4>
 		<p>
 			Using technology to solve problems important to them and their community</p>
 	</li>
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/cybersecurity">Gencyber | Cybersecurity</a></h4>
+			<a href="/education/stem-programs/code-at-tacc/cybersecurity">Gencyber | Cybersecurity</a></h4>
 		<p>
 			Cybersecurity careers and online safety</p>
 	</li>
 	<!--<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/stem-programs/code-at-tacc/cybersecurity-comptia-and-certification-virtual-program">Cybersecurity CompTIA Security+</a></h4>
+			<a href="/education/stem-programs/code-at-tacc/cybersecurity-comptia-and-certification-virtual-program">Cybersecurity CompTIA Security+</a></h4>
 		<p>
 			Preparing participants to pass the CompTIA Security+ exam: baseline skills to perform core security functions for compensation.</p>
 	</li>-->
 	<!--<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/k-12-outreach/alumni">Alumni</a></h4>
+			<a href="/education/k-12-outreach/alumni">Alumni</a></h4>
 		<p>
 			(Pending page content to describe)</p>
 	</li>-->
 	<!--<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/k-12-outreach/impact">Impact</a></h4>
+			<a href="/education/k-12-outreach/impact">Impact</a></h4>
 		<p>
 			(Pending page content to describe)</p>
 	</li>-->
