--- a/web-content-display/education-new/k-12--teachers.html
+++ b/web-content-display/education-new/k-12--teachers.html
@@ -4,7 +4,7 @@
 <ul class="edu-list--major">
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/epic">EPIC</a>&nbsp;(Expanding Pathways in Computing)</h4>
+			<a href="/epic">EPIC (Expanding Pathways in Computing)</a></h4>
 		<p>
 			Broadening participation in K20 computing pathways through research, outreach, professional development, and policy advocacy</p>
 	</li>
