--- a/web-content-display/education-new/professionals.html
+++ b/web-content-display/education-new/professionals.html
@@ -2,31 +2,31 @@
 <ul class="edu-list--major">
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/professionals/institutes">TACC Institute Series</a></h4>
+			<a href="/education/institutes">TACC Institute Series</a></h4>
 		<p>
 			Intense, immersive training in advanced computing execution, administration, reproducability, and purchasing and operations considerations</p>
 	</li>
 	<li>
 		<h4>
-			<a href="https://learn.tacc.utexas.edu/">TACC Learning Portal</a></h4>
+			<a href="https://learn.tacc.utexas.edu/" target="_blank">TACC Learning Portal</a></h4>
 		<p>
 			Discover your power to change the word through advanced computing courses offered through TACC</p>
 	</li>
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/partnerships/industry">Industry Partners</a></h4>
+			<a href="/partnerships/industry">Industry Partners</a></h4>
 		<p>
 			Mutually beneficial exchange of ideas and information between industry and academia in advanced computing technologies</p>
 	</li>
 	<!--<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/professionals/college-faculty">College Faculty</a></h4>
+			<a href="/education/college-faculty">College Faculty</a></h4>
 		<p>
 			(Pending page content to describe)</p>
 	</li>-->
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/k-12-outreach">K-12 Teachers</a></h4>
+			<a href="/education/k-12-outreach">K-12 Teachers</a></h4>
 		<p>
 			Broadening participation in K20 computing pathways and using curriculum from previous sessions of the Code@TACC within your own programs</p>
 	</li>
