--- a/web-content-display/education-new/tours-list.html
+++ b/web-content-display/education-new/tours-list.html
@@ -4,7 +4,7 @@
 <ul class="edu-list--major">
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/tours">Virtual Tour</a></h4>
+			<a href="/education/tours">Virtual Tour</a></h4>
 		<p>
 			TACC's largest supercomputing systems and some of the fastest and most efficient high performance computing and data storage systems</p>
 	</li>
