--- a/web-content-display/education-new/undergrads-graduates.html
+++ b/web-content-display/education-new/undergrads-graduates.html
@@ -2,7 +2,7 @@
 <ul class="edu-list--major">
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/reu"><small>NSF REU (Research Experiences for Undergraduates)</small><br />
+			<a href="/reu"><small>NSF REU (Research Experiences for Undergraduates)</small><br />
 			CyberInfrastructure (CI) Research 4 Social Change</a></h4>
 		<p>
 			Active engagement in solving real-world problems of national relevance with critical thinking, creativitiy, and reflection</p>
@@ -15,13 +15,13 @@
 	</li>
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/education/academic-courses" target="_blank">Academic Courses</a></h4>
+			<a href="/education/academic-courses">Academic Courses</a></h4>
 		<p>
 			Experts in high performance computing teach students of all fields of study apply theories learned in class on high performance computing and cloud systems</p>
 	</li>
 	<li>
 		<h4>
-			<a href="https://www.tacc.utexas.edu/partnerships/spice">SPICE (Supporting Pacific Indigenous Computing Excellence)</a></h4>
+			<a href="/partnerships/spice">SPICE (Supporting Pacific Indigenous Computing Excellence)</a></h4>
 		<p>
 			Working on problem sets that require data science approaches and incorporate geographically, socially- and culturally-relevant research themes</p>
 	</li>
