RT-19483: Add robotics camp info, prep other pages

--- a/web-content-display/education/stem-programs/code-at-tacc/_styles.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/_styles.html
@@ -122,7 +122,8 @@ h4.camp-subhead {
 	margin: 10px 10px 30px 10px;
 }
 
-.camp-aside {
+.camp-aside,
+.camp-info {
 	text-align: center;
 }
 
@@ -306,8 +307,6 @@ Info List
 
 A banner with columns of data.
 
-Warning: Relies on Bootstrap
-
 Markup:
 <ul class="info-list">
 	<li>Apples are good for you.</li>
@@ -318,4 +317,5 @@ Markup:
 .info-list {
 	text-align: center;
 	list-style: none;
+	margin: 0 1em 1em;
 }</style>
