--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -101,7 +101,7 @@
 			<h2 class="camp-subhead">
 				Program Information</h2>
 			<!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> -->
-			<div class="row">
+			<div class="row  camp-info">
 				<!--<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						WHAT TO BRING</h4>
@@ -162,15 +162,22 @@
 							Required forms will be available soon.</li>
 					</ul>
 					<!--<p>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></p>
-						<p>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></p>
-						<ul style="list-style: none;">
-							<li style="margin-bottom: 10px;">
-								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English Code@TACC Cybersecurity - YPP Camp Release">2018 English Code@TACC Cybersecurity - YPP Camp Release </a></li>
-							<li>
-								<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español Code@TACC Cybersecurity - YPP formularios de liberación">2018 Español Code@TACC Cybersecurity - YPP formularios de liberación</a></li>
-						</ul>--></div>
+						<em>Compliance Forms:</em></p>
+					<ul class="camp-info">
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83&amp;env=na1" target="_blank">English</a></li>
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></li>
+					</ul>
+					<p>
+						<em>Release Forms:</em></p>
+					<ul class="camp-info">
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English Code@TACC Cybersecurity - YPP Camp Release">2018 English Code@TACC Cybersecurity - YPP Camp Release </a></li>
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f" target="_blank" title="2018 Español Code@TACC Cybersecurity - YPP formularios de liberación">2018 Español Code@TACC Cybersecurity - YPP formularios de liberación</a></li>
+					</ul>-->
+				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
