--- a/web-content-display/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/connected.html
@@ -101,7 +101,7 @@
 			<h2 class="camp-subhead">
 				Program Information</h2>
 			<!-- <img alt="Supercompute Deep Earth: 2015 Gordon Bell Prize Winner" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/deep-earth.png" style="margin:0px; padding:0px; width:100%;" alt="Camp FAQs"/> -->
-			<div class="row">
+			<div class="row  camp-info">
 				<div class="col-md-4 col-sm-12">
 					<!-- <img alt="Advanced Ligo Discover: 2016" class="img-responsive" src="https://www.tacc.utexas.edu/documents/1084364/1484428/ligo.png" style="margin:0px; padding:0px; width:100%;" alt="What to Bring" /> -->
 					<h4 class="camp-subhead">
@@ -123,19 +123,17 @@
 							Required forms will be available soon.</small></li>
 					</ul>
 					<!--<p>
-						<em>Compliance forms:</em></p>
+						<em>Compliance Forms:</em></p>
+					<ul class="camp-info">
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309&amp;env=na1" target="_blank">English</a></p>
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc&amp;env=na1" target="_blank">Español</a></li>
+					</ul>
 					<p>
-						<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309&amp;env=na1" target="_blank">English</a></p>
-					<p>
-						<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc&amp;env=na1" target="_blank">Español</a></p>
-					<p>
-						<em>Communication Plan:</em></p>
-					<p>
-						<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected/d34cd32b-d477-4c69-92d8-e105b6608614" target="_blank">English</a></p>
-					<p>
-						<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected+-+SPANISH/e66cef38-c332-4634-a504-cdaad60cb40f" target="_blank">Español</a></p>
-					<ul style="list-style: none;">
-						<li style="margin-bottom: 20px;">
+						<em>Release Forms:</em></p>
+					<ul class="camp-info">
+						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309" target="_blank">2018 English Code@TACC Connected - YPP Camp Release Forms</a>
 						</li>
 						<li>
@@ -150,6 +148,14 @@
 						<li>
 							Communication plan will be available soon.</li>
 					</ul>
+					<!--<p>
+						<em>Communication Plan:</em></p>
+					<ul class="camp-info">
+						<li>
+							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected/d34cd32b-d477-4c69-92d8-e105b6608614" target="_blank">English</a></li>
+						<li>
+							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected+-+SPANISH/e66cef38-c332-4634-a504-cdaad60cb40f" target="_blank">Español</a></li>
+					</ul>-->
 				</div>
 			</div>
 			<h2 class="camp-subhead">
