--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -103,7 +103,7 @@
 		<div class="col-md-12">
 			<h2 class="camp-subhead">
 				Program Information</h2>
-			<div class="row">
+			<div class="row  camp-info">
 				<!--<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						WHAT TO BRING</h4>
@@ -159,24 +159,24 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						PROGRAM FORMS</h4>
+					<p>
+						<em>Code of Conduct:</em></p>
 					<ul class="info-list">
 						<li>
-							Required forms will be available soon.</small></li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct.pdf" title="2021 Code@TACC Code of Conduct - ENGLISH" target="_blank">English</a></li>
+						<li>
+							<a href="/documents/1084364/1736606/Code%40TACC+Code+of+Conduct+-+SPANISH.pdf" title="2021 Code@TACC Code of Conduct - SPANISH" target="_blank">Español</a></li>
 					</ul>
-					<!--<div>
-						<em>Compliance forms:</em></div>
-					<div>
-						<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3&amp;env=na1" target="_blank">English</a></div>
-					<div>
-						<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></div>
-					<div>
-						&nbsp;</div>
-					<div>
-						<em>Communication Plan:</em></div>
-					<div>
-						<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Robotics/34609bc0-6ac5-4ef3-83dc-ea2be2f98ae3" target="_blank">English</a></div>
-					<div>
-						<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Robotics+-+SPANISH/f2f4fb6d-e59f-4ba8-be6d-40ca99459d8a" target="_blank">Español</a></div>
+					<!--<p>
+						<em>Compliance Forms:</em></p>
+					<ul class="camp-info">
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3&amp;env=na1" target="_blank">English</a></li>
+						<li>
+							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></li>
+					</ul>-->
+					<!--<p>
+						<em>Release Forms:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3" target="_blank">2018 English Code@TACC - YPP Camp Release Form</a></li>
@@ -187,9 +187,13 @@
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
+					<p>
+						<em>Communication Plan:</em></p>
 					<ul class="info-list">
 						<li>
-							Communication plan will be available soon.</li>
+							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" title="Code@TACC Robotics Communication Plan - ENGLISH" target="_blank">English</a></li>
+						<li>
+							<a href="/documents/1084364/1736606/Comm+Plan+Robotics+-+SPANISH.pdf" title="Code@TACC Robotics Communication Plan - SPANISH" target="_blank">Español</a></li>
 					</ul>
 				</div>
 			</div>
