Quick: Fix cybersecurity camp closing div bug

--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -537,11 +537,9 @@
 					<li>
 						<img alt="CISCO Logo" src="/documents/1084364/1822769/cisco-logo-blue-2016.png" /></li>
 				</ul>
-				<p class="small">These are all contributors to our goals, and shall get the same general dimensions for space on the site, but none are highlighted more than others.</p>
-			</div>
-	</div>
-	<!--
-		<div class="row">
+				<p class="small">These are all contributors to our goals, and shall get the same general dimensions for space on the site, but none are highlighted more than others.</p>-->
+		</div>
+		<!--<div class="row">
 			<div style="margin:50px 0px;padding: 0px;">
 					<h2 style="text-align: center;">
 						Related Links</h2>
@@ -553,5 +551,6 @@
 			<div class="col-sm-6">
 				<a aria-label="The formal Code@TACC website." href="https://www.gen-cyber.com" target="_blank"><img alt="Code@TACC" class="img-responsive img-banners" src="https://www.tacc.utexas.edu/documents/1084364/1158641/DS-Banner.jpg" /></a>
 					</div>
-		</div>
-		--></div>
+		</div>-->
+	</div>
+</div>
