RT-19483: Add robotics camp release forms

--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -175,14 +175,14 @@
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></li>
 					</ul>-->
-					<!--<p>
+					<p>
 						<em>Release Forms:</em></p>
 					<ul class="info-list">
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3" target="_blank">2018 English Code@TACC - YPP Camp Release Form</a></li>
+							<a href="/documents/1084364/1736606/UT+Release+Agreement.pdf" target="_blank">English</a></li>
 						<li>
-							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709" target="_blank">2018 Español Code@TACC - YPP formularios de liberación</a></li>
-					</ul>-->
+							<a href="/documents/1084364/1736606/UT+Release+Agreement+-+SPANISH.pdf" target="_blank">Spanish</a></li>
+					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
 					<h4 class="camp-subhead">
