RT-19483: Code@TACC Camp form titles

--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity-comptia.html
@@ -315,7 +315,7 @@ body {
 							- Release and Indemnification – English and Spanish
 						-->
 					<p>
-						<em>Release Forms:</em></p>
+						<em>Release &amp; Indemnification Agreement:</em></p>
 					<p>
 						<a href=" https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6aa21f10-26a2-4ccc-bb3c-0bb9ba4665f4&amp;env=na1&amp;acct=d40a37d5-d708-44dd-9ea7-aab378b81326&amp;v=2" target="_blank">Minors Required Documents</a><br />
 						(17 years old and under)</p>
@@ -327,7 +327,7 @@ body {
 					<h4 class="camp-subhead" style="margin:10px 10px 30px 10px; padding:0px;">
 						CAMP PROGRAM</h4>
 					<p>
-						<em>Communication Plan:</em></p>
+						<em>Y.P.P. Communication Plan:</em></p>
 					<p>
 						<a href="/documents/1084364/1736606/Comm+Plan+-+Cybersecurity+CompTIA.pdf" target="_blank">English</a></p>
 					<p>
