--- a/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/cybersecurity.html
@@ -170,7 +170,7 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=ae067a87-eb26-42d4-be16-344a705d148f&amp;env=na1" target="_blank">Español</a></li>
 					</ul>
 					<p>
-						<em>Release Forms:</em></p>
+						<em>Release &amp; Indemnification Agreement:</em></p>
 					<ul class="camp-info">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=8441907e-13cf-42a7-a6bc-f37c1b99ec83" target="_blank" title="2018 English Code@TACC Cybersecurity - YPP Camp Release">2018 English Code@TACC Cybersecurity - YPP Camp Release </a></li>
