--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -176,7 +176,7 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=7b4e849b-0139-4307-bdc8-b636a323b709&amp;env=na1" target="_blank">Español</a></li>
 					</ul>-->
 					<p>
-						<em>Release Forms:</em></p>
+						<em>Release &amp; Indemnification Agreement:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/UT+Release+Agreement.pdf" target="_blank">English</a></li>
@@ -188,7 +188,7 @@
 					<h4 class="camp-subhead">
 						CAMP PROGRAM</h4>
 					<p>
-						<em>Communication Plan:</em></p>
+						<em>Y.P.P. Communication Plan:</em></p>
 					<ul class="info-list">
 						<li>
 							<a href="/documents/1084364/1736606/Comm+Plan+Robotics.pdf" title="Code@TACC Robotics Communication Plan - ENGLISH" target="_blank">English</a></li>
