--- a/web-content-display/education/stem-programs/code-at-tacc/connected.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/connected.html
@@ -131,7 +131,7 @@
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=2a80961b-5625-46f5-b5e1-d6ebe70acadc&amp;env=na1" target="_blank">Español</a></li>
 					</ul>
 					<p>
-						<em>Release Forms:</em></p>
+						<em>Release &amp; Indemnification Agreement:</em></p>
 					<ul class="camp-info">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=88127a7a-05a8-4641-8fea-846a07f74309" target="_blank">2018 English Code@TACC Connected - YPP Camp Release Forms</a>
@@ -149,7 +149,7 @@
 							Communication plan will be available soon.</li>
 					</ul>
 					<!--<p>
-						<em>Communication Plan:</em></p>
+						<em>Y.P.P. Communication Plan:</em></p>
 					<ul class="camp-info">
 						<li>
 							<a href="https://www.tacc.utexas.edu/documents/1084364/1736606/Comm+Plan+-+Connected/d34cd32b-d477-4c69-92d8-e105b6608614" target="_blank">English</a></li>
