Quick: Save untracked change to Training & Events

--- a/web-content-display/home--training-and-events.html
+++ b/web-content-display/home--training-and-events.html
@@ -1,30 +1,62 @@
-{{> styles}}
+<style id="style--abbr-title" type="text/css">
+/* TODO: Add this to global CSS */
+/* FAQ: The global CSS styles this with a border bottom,
+        but neglects to remove browsers' dotted underline style
+        (has style: Firefox, Chrome…; no style: Safari…) */
+        abbr[title] { text-decoration: none; }</style>
 <h2 id="training-events">
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=115" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/c-plus-plus.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://www.dellhpc.org/event_5-19-2021.html/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/dell.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://learn.tacc.utexas.edu/mod/page/view.php?id=115" target="_blank">MPL Object-Oriented Interface to MPI</a><br />
-			February 25, 2021</p>
+			<a href="https://www.dellhpc.org/event_5-19-2021.html/" target="_blank">Preparing Current and Future Domain Scientists for Advanced Computing - Register today!</a><br />
+			May 19th | 10am CDT</p>
 	</div>
 </div>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=99" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=106" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/frontera-welcome.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=99" target="_blank">Intro to Machine Learning Concepts, Tools, and Methods</a><br />
-			March 5, 2021</p>
+			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=106" target="_blank">High Performance Computing on Frontera</a><br />
+			May 20th, 27th, June 3rd | 10am - 3:30pm CDT</p>
 	</div>
 </div>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=100" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1825988/tacc.png" style="margin-bottom:10px;" /></a></div>
+		<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1694621/designsafe-events.jpg" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
-			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=100" target="_blank">Intro to Deep Learning Concepts, Tools, and Methods</a><br />
-			March 12, 2021</p>
+			<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" target="_blank">2021 DesignSafe Academy</a><br />
+			July 26th - 30th | 10am - 5pm CDT</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.isc-hpc.com/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1141713/homepageNews0.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.isc-hpc.com/" target="_blank">ISC High Performance 2021 Digital</a><br />
+			June 24th – July 2nd</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://pearc.acm.org/pearc21/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/pearc21.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://pearc.acm.org/pearc21/" target="_blank"><abbr title="Practice & Experience in Advanced Research Computing 2021 (Conference)">PEARC21</abbr> Virtual Conference</a><br />
+			July 19th – 22nd</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://sc21.supercomputing.org/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/sc21.png" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://sc21.supercomputing.org/" target="_blank"><abbr title="Supercomputing 2021 (Conference)">SC2021</abbr></a><br />
+			November 14th – 19th</p>
 	</div>
 </div>
