--- a/web-content-display/home--training-and-events.html
+++ b/web-content-display/home--training-and-events.html
@@ -8,29 +8,12 @@
 	Training &amp; Events</h2>
 <div class="row">
 	<div class="col-xs-3">
-		<a href="https://www.dellhpc.org/event_5-19-2021.html/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/dell.png" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://www.dellhpc.org/event_5-19-2021.html/" target="_blank">Preparing Current and Future Domain Scientists for Advanced Computing - Register today!</a><br />
-			May 19th | 10am CDT</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
 		<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=106" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1970021/frontera-welcome.png" style="margin-bottom:10px;" /></a></div>
 	<div class="col-xs-9">
 		<p>
 			<a href="https://learn.tacc.utexas.edu/enrol/index.php?id=106" target="_blank">High Performance Computing on Frontera</a><br />
-			May 20th, 27th, June 3rd | 10am - 3:30pm CDT</p>
-	</div>
-</div>
-<div class="row">
-	<div class="col-xs-3">
-		<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1694621/designsafe-events.jpg" style="margin-bottom:10px;" /></a></div>
-	<div class="col-xs-9">
-		<p>
-			<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" target="_blank">2021 DesignSafe Academy</a><br />
-			July 26th - 30th | 10am - 5pm CDT</p>
+			May 27th, June 3rd<span>&nbsp; |&nbsp;
+			10am - 3:30pm CDT</span></p>
 	</div>
 </div>
 <div class="row">
@@ -49,6 +32,16 @@
 		<p>
 			<a href="https://pearc.acm.org/pearc21/" target="_blank"><abbr title="Practice & Experience in Advanced Research Computing 2021 (Conference)">PEARC21</abbr> Virtual Conference</a><br />
 			July 19th – 22nd</p>
+	</div>
+</div>
+<div class="row">
+	<div class="col-xs-3">
+		<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" style="margin-bottom:10px;" target="_blank"><img class="img-responsive" src="/documents/1084364/1694621/designsafe-events.jpg" style="margin-bottom:10px;" /></a></div>
+	<div class="col-xs-9">
+		<p>
+			<a href="https://www.designsafe-ci.org/learning-center/training/webinars/ds/2021/designsafe-academy/" target="_blank">2021 DesignSafe Academy</a><br />
+			July 26th - 30th<span>&nbsp; |&nbsp;
+			10am - 5pm CDT</span></p>
 	</div>
 </div>
 <div class="row">
