RT-19483: Add final docs

--- a/web-content-display/education/stem-programs/code-at-tacc/robotics.html
+++ b/web-content-display/education/stem-programs/code-at-tacc/robotics.html
@@ -169,7 +169,7 @@
 					</ul>
 					<!--<p>
 						<em>Compliance Forms:</em></p>
-					<ul class="camp-info">
+					<ul class="info-list">
 						<li>
 							<a href="https://www.docusign.net/Member/PowerFormSigning.aspx?PowerFormId=6f948a45-b80c-4985-b9eb-7df53f1032a3&amp;env=na1" target="_blank">English</a></li>
 						<li>
@@ -182,6 +182,14 @@
 							<a href="/documents/1084364/1736606/UT+Release+Agreement.pdf" target="_blank">English</a></li>
 						<li>
 							<a href="/documents/1084364/1736606/UT+Release+Agreement+-+SPANISH.pdf" target="_blank">Spanish</a></li>
+					</ul>
+					<p>
+						<em>Media Release:</em></p>
+					<ul class="info-list">
+						<li>
+							<a href="/documents/1084364/1736606/Media+Release Robotics+-+Adult.pdf" target="_blank">English</a></li>
+						<li>
+							<a href="Media+Release Robotics+-+Adult+-+SPANISH.pdf" target="_blank">Español</a></li>
 					</ul>
 				</div>
 				<div class="col-md-4 col-sm-12">
